# pptx-export-mcp

./: README.md  package-lock.json  package.json  pyproject.toml  test_pptx_export.py
src/: index.js
src/pptx_export_mcp/: __init__.py  server.py
